--- a/app/src/main/res/layout/sign_in_screen.xml
+++ b/app/src/main/res/layout/sign_in_screen.xml
@@ -12,96 +12,120 @@
         android:id="@+id/signInScreen_whiteBackground"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/white_background"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="154dp" />
+        android:layout_marginTop="150dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/white_background" />
 
     <ImageView
         android:id="@+id/signInScreen_graphIcon"
         android:layout_width="207dp"
         android:layout_height="172dp"
-        app:srcCompat="@drawable/graph_icon"
-        tools:layout_editor_absoluteX="196dp"
-        tools:layout_editor_absoluteY="26dp" />
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/graph_icon" />
 
     <ImageView
         android:id="@+id/signInScreen_cloudIcon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/cloud_icon"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="47dp" />
+        android:layout_width="140dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="28dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/cloud_icon" />
 
     <ImageView
         android:id="@+id/signInScreen_carIcon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/car_icon"
-        tools:layout_editor_absoluteX="35dp"
-        tools:layout_editor_absoluteY="164dp" />
+        android:layout_width="145dp"
+        android:layout_height="79dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="100dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signInScreen_cloudIcon"
+        app:srcCompat="@drawable/car_icon" />
 
     <TextView
         android:id="@+id/signInScreen_signInText"
         android:layout_width="111dp"
         android:layout_height="47dp"
+        android:layout_marginTop="15dp"
         android:fontFamily="@font/inder"
         android:text="Sign In"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        tools:layout_editor_absoluteX="150dp"
-        tools:layout_editor_absoluteY="273dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signInScreen_carIcon" />
 
     <EditText
         android:id="@+id/signInScreen_passwordTextInput"
-        android:layout_width="247dp"
-        android:layout_height="44dp"
+        android:layout_width="274dp"
+        android:layout_height="53dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="text"
         android:text="Password"
-        tools:layout_editor_absoluteX="82dp"
-        tools:layout_editor_absoluteY="437dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signInScreen_emailTextInput" />
 
     <EditText
         android:id="@+id/signInScreen_emailTextInput"
-        android:layout_width="247dp"
-        android:layout_height="44dp"
+        android:layout_width="272dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="80dp"
         android:ems="10"
         android:inputType="text"
         android:text="Email"
-        tools:layout_editor_absoluteX="82dp"
-        tools:layout_editor_absoluteY="366dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signInScreen_signInText" />
 
     <Button
         android:id="@+id/signInScreen_signInButton"
         android:layout_width="145dp"
         android:layout_height="53dp"
+        android:layout_marginEnd="36dp"
+        android:layout_marginBottom="36dp"
         android:backgroundTint="#B0F2BD"
         android:fontFamily="@font/inder"
         android:text="Sign In"
         android:textColor="#000000"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="238dp"
-        tools:layout_editor_absoluteY="650dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/signInScreen_signUpButton"
         android:layout_width="105dp"
-        android:layout_height="45dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="26dp"
+        android:layout_marginEnd="36dp"
         android:backgroundTint="#FFFFFF"
         android:text="Sign Up"
         android:textAlignment="textStart"
         android:textColor="#76CC87"
         android:textSize="16sp"
-        tools:layout_editor_absoluteX="237dp"
-        tools:layout_editor_absoluteY="504dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/signInScreen_accountText"
+        app:layout_constraintTop_toBottomOf="@+id/signInScreen_passwordTextInput" />
 
     <TextView
         android:id="@+id/signInScreen_accountText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="36dp"
         android:fontFamily="@font/inder"
         android:text="Don't have account?"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        tools:layout_editor_absoluteX="67dp"
-        tools:layout_editor_absoluteY="514dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signInScreen_passwordTextInput" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
